Extending loading time; Fixing title bar overflow

--- a/src/style/ContentContainer.css
+++ b/src/style/ContentContainer.css
@@ -61,6 +61,9 @@
   font-size: 20px;
   line-height: 36px;
   letter-spacing: 0.05em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .close-btn {
